--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.002   2024-03-17  Released-By: PERLANCAR; Urgency: medium
+
+        - Update to Module::Features::PluginSystem 0.002 (set_v=2).
+
+
 0.001   2024-02-12  Released-By: PERLANCAR
 
         - First release.
